client/styles/Home.module.css
.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.header {
  display: flex;
  align-items: center;
  justify-content: center;
}

.section_container {
  display: flex;
  justify-content: center;
  margin-left: 200px;
  margin-right: 200px;
}

.infos {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  flex-direction: column;
  padding: 15px 10px;
  width: 70%;
  margin-bottom: 120px;
}

.infos h1 {
  margin-bottom: 20px;
  color: white;
  font-size: 3rem;
  /*font-weight: 500;*/
  text-transform: uppercase;
}

.infos p {
  color: white;
  /*width: 718px;*/
  font-size: 30px;
  max-width: 678px;
}

.charts {
  width: 100%;
  margin-bottom: 30px;
}

.pill_container {
  display: flex;
  align-items: center;
}

.pill {
  display: flex;
  justify-content: center;
  flex-direction: column;
  color: #ffffff;
  width: 500px;
  height: 300px;
  border: 2px solid #ffffff;
  border-radius: 12px;
  margin-left: 20px;
  margin-right: 20px;
}

.pill .header {
  font-size: 20px;
  margin-bottom: 20px;
  text-transform: uppercase;
}

.pill .detail {
  font-size: 40px;
}

.button {
  cursor: pointer;
  font-size: 30px;
  padding: 30px 30px;
  border-radius: 4px;
  background-color: #098a74;
  color: white;
  transition: all 0.2s ease-in-out;
}

.button:hover {
  transform: scale(1.1);
}

@media (max-width: 1800px) {
  .pill_container {
    flex-direction: column;
  }

  .pill {
    margin-bottom: 30px;
  }

  .pill:last-child {
    margin-bottom: 0;
  }
}

@media (max-width: 930px) {
  .section_container {
    margin: 0 50px;
  }

  .infos {
    width: 100%;
    margin-bottom: 40px;
  }

  .pill_container {
    flex-direction: column;
  }

  .pill {
    width: 250px;
    height: 150px;
    margin-bottom: 30px;
  }

  .pill:last-child {
    margin-bottom: 0;
  }

  .pill .header {
    font-size: 12px;
    margin-bottom: 20px;
    text-transform: uppercase;
  }

  .pill .detail {
    font-size: 20px;
  }

  .infos h1 {
    font-size: 2rem;
  }

  .infos p:not(.ca) {
    font-size: 18px;
  }

  .infos .ca {
    font-size: 12px;
  }
}

